# textbook-parser

./: .gitignore  README.md  pyproject.toml
configs/: books.yaml  defaults.yaml
material/text-by-layout/: 义务教育教科书·语文五年级上册.md  义务教育教科书·语文五年级下册.md  义务教育教科书·语文六年级上册.md  义务教育教科书·语文六年级下册.md  义务教育教科书·语文四年级上册.md  义务教育教科书·语文四年级下册.md  （根据2022年版课程标准修订）义务教育教科书·语文一年级上册.md  （根据2022年版课程标准修订）义务教育教科书·语文一年级下册.md  （根据2022年版课程标准修订）义务教育教科书·语文三年级上册.md  （根据2022年版课程标准修订）义务教育教科书·语文三年级下册.md  （根据2022年版课程标准修订）义务教育教科书·语文二年级上册.md  （根据2022年版课程标准修订）义务教育教科书·语文二年级下册.md
output/: b11_写字表.json  b11_写字表.md  b11_正文分块.json  b11_正文分块.md  b11_目录.json  b11_目录.md  b11_识字表.json  b11_识字表.md  b12_写字表.json  b12_写字表.md  b12_正文分块.json  b12_正文分块.md  b12_目录.json  b12_目录.md  b12_识字表.json  b12_识字表.md  b21_写字表.json  b21_写字表.md  b21_正文分块.json  b21_正文分块.md  b21_目录.json  b21_目录.md  b21_识字表.json  b21_识字表.md  b21_词语表.json  b21_词语表.md  b22_写字表.json  b22_写字表.md  b22_正文分块.json  b22_正文分块.md  b22_目录.json  b22_目录.md  b22_识字表.json  b22_识字表.md  b22_词语表.json  b22_词语表.md  b31_写字表.json  b31_写字表.md  b31_正文分块.json  b31_正文分块.md  (+72 more)
scripts/: export_web_data.py
src/textbook_parser/: cli.py  config.py  pdftotext.py  run_logging.py  toc_csv.py  toc_layout_assign.py  toc_text_chunk.py
src/textbook_parser/extractors/: __init__.py  char_tables.py  layout_toc.py  word_table.py
web/: index.html
web/css/: app.css
web/js/: app.js
